# haptic-imitation

./: .clangd  .gitignore  Dockerfile  Dockerfile.cuda  README.md  docker-compose-cuda.yml  docker-compose.yml  packages.txt  requirements.txt
.devcontainer/: devcontainer.json
barrett_cfgs/: link_configs.sh  unlink_configs.sh
barrett_cfgs/calibration_data/wam7w/: gravitycal.conf
wam_ws/src/barrett-ros2-pkg/: README.md
wam_ws/src/barrett-ros2-pkg/src/bhand_msgs/: CMakeLists.txt  package.xml
wam_ws/src/barrett-ros2-pkg/src/bhand_srvs/: CMakeLists.txt  package.xml
wam_ws/src/barrett-ros2-pkg/src/wam_demos/: CMakeLists.txt  package.xml
wam_ws/src/barrett-ros2-pkg/src/wam_demos/src/: play.cpp  teach.cpp
wam_ws/src/barrett-ros2-pkg/src/wam_msgs/: CMakeLists.txt  package.xml
wam_ws/src/barrett-ros2-pkg/src/wam_msgs/msg/: RTAngularVelocity.msg  RTCartOrientation.msg  RTCartPose.msg  RTCartPosition.msg  RTJointPositions.msg  RTJointVelocities.msg  RTLinearVelocity.msg  RTLinearandAngularVelocity.msg
wam_ws/src/barrett-ros2-pkg/src/wam_node/: CMakeLists.txt  package.xml
wam_ws/src/barrett-ros2-pkg/src/wam_node/launch/: wam_node_launch.py
wam_ws/src/barrett-ros2-pkg/src/wam_node/src/: bhand_services.h  wam_node.cpp  wam_services.h  wam_subscribers.h
wam_ws/src/barrett-ros2-pkg/src/wam_sim/launch/: wam_empty_sim_launch.py  wam_sim_launch.py
wam_ws/src/barrett-ros2-pkg/src/wam_srvs/: CMakeLists.txt  package.xml
wam_ws/src/barrett-ros2-pkg/src/wam_srvs/srv/: CartOrientationMove.srv  CartPoseMove.srv  CartPositionMove.srv  JointMove.srv
wam_ws/src/realsense_config/launch/: pointcloud_rs.launch.py
wam_ws/src/wam_flow/: package.xml  setup.cfg  setup.py
wam_ws/src/wam_flow/wam_flow/: wam_inference.py
wam_ws/src/wam_testing/: package.xml  setup.cfg  setup.py
wam_ws/src/wam_testing/wam_testing/: wam_test.py
wam_ws/src/wam_xbox/: package.xml  setup.cfg  setup.py
wam_ws/src/wam_xbox/launch/: wam_xbox_launch.py
wam_ws/src/wam_xbox/wam_xbox/: wam_xbox_control.py
