<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wam_demos</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="support@barrett.com">robot</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <build_depend>wam_msgs</build_depend>
  <exec_depend>wam_msgs</exec_depend>
  <build_export_depend>wam_msgs</build_export_depend>
  <build_depend>wam_srvs</build_depend>
  <exec_depend>wam_srvs</exec_depend>
  <build_export_depend>wam_srvs</build_export_depend>
  <build_depend>bhand_msgs</build_depend>
  <exec_depend>bhand_msgs</exec_depend>
  <build_export_depend>bhand_msgs</build_export_depend>
  <build_depend>bhand_srvs</build_depend>
  <exec_depend>bhand_srvs</exec_depend>
  <build_export_depend>bhand_srvs</build_export_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>